--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,33 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    
-    <uses-feature android:name="android.hardware.vulkan.level"
-        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.vulkan.level"
+        android:required="true" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tubitak"
-        tools:targetApi="31"
-        android:hardwareAccelerated="false"> <!-- Donanım hızlandırma devre dışı bırakıldı -->
+        tools:targetApi="31"> <!-- Donanım hızlandırma devre dışı bırakıldı -->
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:hardwareAccelerated="false"> <!-- Bu aktivite için donanım hızlandırma devre dışı -->
+            android:hardwareAccelerated="true"> <!-- Bu aktivite için donanım hızlandırma devre dışı -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
